<resources>
    <string name="app_name">MiniCakeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_minicake">Welcome to MiniCake</string>
    <string name="app_logo">App logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="start_order">Start order</string>
    <string name="sent_to">Sent to</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="how_many_cupcakes_do_you_want">How many cupcakes do you want?</string>
    <string name="user_send_data">Insert your email and the email of the receiver</string>
    <string name="choose_the_flavor_of_your_cupcakes">Choose the flavor of your cupcakes</string>
    <string name="choose_the_pickup_date">Choose the pickup date</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="flavor">Flavor</string>
    <string name="send_order">Send Order</string>
    <string name="order_item_total">Total</string>
    <string name="email_data">Email data</string>
    <string name="choose_quantity">Choose the quantity</string>
    <string name="order_history">Order history</string>
    <string name="choose_flavor">Choose the flavor</string>
    <string name="summary">Summary</string>
    <string-array name="flavor_options">
        <item>Chocolate</item>
        <item>Vanilla</item>
        <item>Red Velvet</item>
        <item>Lemon Pie</item>
        <item>Oreo Cookie</item>
    </string-array>
</resources>