<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.minicakeapp.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_homeFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.minicakeapp.ui.UserFragment"
        android:label="@string/email_data"
        tools:layout="@layout/fragment_user">
        <action
            android:id="@+id/action_userFragment_to_quantityFragment"
            app:destination="@id/quantityFragment" />
    </fragment>
    <fragment
        android:id="@+id/quantityFragment"
        android:name="com.example.minicakeapp.ui.QuantityFragment"
        android:label="@string/choose_quantity"
        tools:layout="@layout/fragment_quantity">
        <action
            android:id="@+id/action_quantityFragment_to_flavorFragment"
            app:destination="@id/flavorFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.minicakeapp.ui.HistoryFragment"
        android:label="@string/order_history"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/flavorFragment"
        android:name="com.example.minicakeapp.ui.FlavorFragment"
        android:label="@string/choose_flavor"
        tools:layout="@layout/fragment_flavor">
        <action
            android:id="@+id/action_flavorFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
    </fragment>
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.example.minicakeapp.ui.PickupFragment"
        android:label="@string/choose_the_pickup_date"
        tools:layout="@layout/fragment_pickup">
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.minicakeapp.ui.SummaryFragment"
        android:label="@string/summary"
        tools:layout="@layout/fragment_summary" />
</navigation>